// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles CRLF newlines 1`] = `
RaFile {
  "data": {
    "valueA": RaStanza {
      "data": {
        "key1": "valueA",
        "key2": "valueB",
      },
      "indent": "",
      "name": "valueA",
      "nameKey": "key1",
    },
    "valueC": RaStanza {
      "data": {
        "key1": "valueC",
        "key2": "valueD",
      },
      "indent": "",
      "name": "valueC",
      "nameKey": "key1",
    },
  },
  "nameKey": "key1",
}
`;

exports[`handles indented stanzas 1`] = `
RaFile {
  "data": {
    "Foot": RaStanza {
      "data": {
        "key1": "Foot",
        "key2": "Ankle",
        "key3": "Knee",
      },
      "indent": "        ",
      "name": "Foot",
      "nameKey": "key1",
    },
    "valA": RaStanza {
      "data": {
        "key1": "valA",
        "key2": "valB",
        "key3": "valC",
      },
      "indent": "",
      "name": "valA",
      "nameKey": "key1",
    },
    "valD": RaStanza {
      "data": {
        "key1": "valD",
        "key2": "valE",
        "key3": "valF",
      },
      "indent": "    ",
      "name": "valD",
      "nameKey": "key1",
    },
    "valG": RaStanza {
      "data": {
        "key1": "valG",
        "key2": "valH",
        "key3": "valI",
      },
      "indent": "",
      "name": "valG",
      "nameKey": "key1",
    },
  },
  "nameKey": "key1",
}
`;

exports[`parses a file with comments 1`] = `
RaFile {
  "data": {
    "valA": RaStanza {
      "data": {
        "key1": "valA",
        "key2": "valB",
        "key3": "valC",
      },
      "indent": "",
      "name": "valA",
      "nameKey": "key1",
    },
    "valD": RaStanza {
      "data": {
        "key1": "valD",
        "key2": "valE",
        "key3": "valF",
      },
      "indent": "",
      "name": "valD",
      "nameKey": "key1",
    },
  },
  "nameKey": "key1",
}
`;

exports[`parses a list of stanzas 1`] = `
RaFile {
  "data": {
    "valueA": RaStanza {
      "data": {
        "key1": "valueA",
        "key2": "valueB",
      },
      "indent": "",
      "name": "valueA",
      "nameKey": "key1",
    },
    "valueC": RaStanza {
      "data": {
        "key1": "valueC",
        "key2": "valueD",
      },
      "indent": "",
      "name": "valueC",
      "nameKey": "key1",
    },
  },
  "nameKey": "key1",
}
`;

exports[`parses a simple three stanza file 1`] = `
RaFile {
  "data": {
    "valA": RaStanza {
      "data": {
        "key1": "valA",
        "key2": "valB",
        "key3": "valC",
      },
      "indent": "",
      "name": "valA",
      "nameKey": "key1",
    },
    "valD": RaStanza {
      "data": {
        "key1": "valD",
        "key2": "valE",
        "key3": "valF",
      },
      "indent": "",
      "name": "valD",
      "nameKey": "key1",
    },
    "valG": RaStanza {
      "data": {
        "key1": "valG",
        "key2": "valH",
        "key3": "valI",
      },
      "indent": "",
      "name": "valG",
      "nameKey": "key1",
    },
  },
  "nameKey": "key1",
}
`;
